# rust_nlp

./: .gitignore  Cargo.toml  License  README.md
data/: stopwords.txt
src/: local.rs  logging.rs  main.rs  network.rs  pattern.rs  topic.rs  word2vec.rs
