[package]
name = "rust-nlp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"         # Load environment variables from .env file
rust-bert = "0.20.0"    # Machine learning models including BERT
tokenizers = "0.13.3"   # Text tokenization
tch = "0.10.0"          # PyTorch bindings for Rust
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"      # For JSON handling if needed
tokio = {version = "1.30.0", features = ["full"]} # Asynchronous runtime for Rust
anyhow = "1.0"          # Error handling
reqwest = {version = "0.11.16", features = ["json"] } # HTTP client
regex = "1.11.0"        # Regular expression library for Rust   
ndarray = "0.16.0"      # Array library for Rust
fastrand = "2.0"        # Fast random number generator
rayon = "1.10.0"        # Parallel execution library for Rust
indicatif = "0.17"      # Progress bar library for Rust
num_cpus = "1.16"       # For getting number of CPU cores
plotters = "0.3"        # Plotting library for Rust
eframe = "0.29.0"       # egui framework
egui_plot = "0.29.0"    # plotting support for egui
log = "0.4"             # Logging library for Rust
env_logger = "0.10"     # One possible logging implementation
chrono = "0.4"          # For timestamp formatting